# Mel-Band-Roformer-Vocal-Model

./: .gitignore  README.md  flake.nix  inference.py  setup.cfg  utils.py
src/mel_band_roformer_vocal/: __init__.py  cli.py  config.py  demix.py  modeling.py  separator.py
src/mel_band_roformer_vocal/models/: __init__.py
src/mel_band_roformer_vocal/models/mel_band_roformer/: attend.py  mel_band_roformer.py
tests/: test_import.py  test_separator_smoke.py
