[metadata]
name = mel-band-roformer-vocal-model
version = 0.1.0
description = Mel-Band RoFormer vocal separation model + inference utilities
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    PyYAML>=6
    beartype==0.14.1
    einops==0.6.1
    librosa
    ml_collections
    numpy
    packaging
    rotary_embedding_torch==0.3.5
    soundfile
    torch>=2.0.1
    tqdm

[options.packages.find]
where = src

[options.package_data]
mel_band_roformer_vocal = configs/*.yaml

[options.entry_points]
console_scripts =
    mel-band-roformer-separate = mel_band_roformer_vocal.cli:main

[options.extras_require]
dev =
    pytest>=7
    build>=1.0.0

